Higher contrast ratio for form placeholder + fix for radio boxes

--- a/src/scss/_form-section.scss
+++ b/src/scss/_form-section.scss
@@ -157,7 +157,7 @@
 
       &::placeholder {
         color: white;
-        opacity: 0.2;
+        opacity: 0.6;
       }
     }
 
